force-app/main/default/objects/Hz_Horizon_Charges__c/Hz_Horizon_Charges__c.object-meta.xml
<CustomObject>
    <label>Horizon Charge</label>
    <nameField>
        <displayFormat>Hz-{0000}</displayFormat>
        <label>Horizon Health Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Horizon Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>