force-app/main/default/objects/Hz_Horizon_Charges__c/fields/FH_Geozip__c.field-meta.xml
<CustomField>
    <fullName>FH_Geozip__c</fullName>
    <formula>LEFT(Geozip__c, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FH Geozip</label>
    <type>Text</type>
</CustomField>