force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Geozip__c.field-meta.xml
<CustomField>
    <fullName>Geozip__c</fullName>
    <label>Geozip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>