force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Aggregate_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Hz_Aggregate_Allowance__c</fullName>
    <formula>TEXT(Hz_Insurance_Plan__r.Aggregate_Allowance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggregate Allowance</label>
    <type>Text</type>
</CustomField>