force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_allowance_percentage__c.field-meta.xml
<CustomField>
    <fullName>Hz_allowance_percentage__c</fullName>
    <formula>IF(
  OR(
    TEXT(Hz_VOB_Case__r.VOB_Type__c) = &apos;Reverification&apos;,
    TEXT(Hz_VOB_Case__r.VOB_Type__c) = &apos;Major Med&apos;
  ),
  Hz_Insurance_Plan__r.Allowance_Percentage__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>