force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Allowance_Percentage_Number__c.field-meta.xml
<CustomField>
    <fullName>Hz_Allowance_Percentage_Number__c</fullName>
    <formula>Hz_Insurance_Plan__r.Allowance_Percentage_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowance Percentage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>