force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hz_Approved_Amount__c</fullName>
    <label>Approved Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>