force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Balance__c.field-meta.xml
<CustomField>
    <fullName>Hz_Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>