force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Hz_Charge_Id__c</fullName>
    <externalId>true</externalId>
    <label>Charge Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>