force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Charge_Responisiblity_Priority__c.field-meta.xml
<CustomField>
    <fullName>Hz_Charge_Responisiblity_Priority__c</fullName>
    <label>Charge Responisibility Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>