force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Charge_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Hz_Charge_Responsibility__c</fullName>
    <label>Charge Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>