force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Charge_Responsibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Hz_Charge_Responsibility_Type__c</fullName>
    <label>Charge Responsibility Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>