force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Clinical_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Hz_Clinical_Case_Id__c</fullName>
    <label>Clinical Case Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>