force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Created_At__c.field-meta.xml
<CustomField>
    <fullName>Hz_Created_At__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>