force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Created_By_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Hz_Created_By_User_Id__c</fullName>
    <label>Created By User Id</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>