force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Diagnosis_10_Code__c.field-meta.xml
<CustomField>
    <fullName>Hz_Diagnosis_10_Code__c</fullName>
    <label>Diagnosis 10 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>