force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_DOS__c.field-meta.xml
<CustomField>
    <fullName>Hz_DOS__c</fullName>
    <label>DOS</label>
    <type>Date</type>
</CustomField>