force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_fee_schedule__c.field-meta.xml
<CustomField>
    <fullName>Hz_fee_schedule__c</fullName>
    <formula>IF(
  OR(
    TEXT(Hz_VOB_Case__r.VOB_Type__c) = &apos;Reverification&apos;,
    TEXT(Hz_VOB_Case__r.VOB_Type__c) = &apos;Major Med&apos;
  ),
  TEXT(Hz_Insurance_Plan__r.Fee_Schedule__c),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Schedule</label>
    <type>Text</type>
</CustomField>