force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Financial_Period__c.field-meta.xml
<CustomField>
    <fullName>Hz_Financial_Period__c</fullName>
    <label>Financial Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>