force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_First_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Hz_First_Claim_Number__c</fullName>
    <label>First Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>