force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_First_Payer_Id__c.field-meta.xml
<CustomField>
    <fullName>Hz_First_Payer_Id__c</fullName>
    <label>First Payer Id</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>