force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_First_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Hz_First_Statement_Date__c</fullName>
    <label>First Statement Date</label>
    <type>Date</type>
</CustomField>