force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_ICD_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Hz_ICD_Indicator__c</fullName>
    <label>ICD Indicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>