force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Insurance_Payments_Applied__c.field-meta.xml
<CustomField>
    <fullName>Hz_Insurance_Payments_Applied__c</fullName>
    <label>Insurance Payments Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>