force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Insurance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Hz_Insurance_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Plan</label>
    <referenceTo>Insurance_Plan__c</referenceTo>
    <relationshipName>Horizon_Healths</relationshipName>
    <type>Lookup</type>
</CustomField>