force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Last_Claim_Assembled_By__c.field-meta.xml
<CustomField>
    <fullName>Hz_Last_Claim_Assembled_By__c</fullName>
    <label>Last Claim Assembled By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>