force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Last_Claim_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Hz_Last_Claim_Date_Submitted__c</fullName>
    <label>Last Claim Date Submitted</label>
    <type>DateTime</type>
</CustomField>