force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Metadata_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Hz_Metadata_Time_Stamp__c</fullName>
    <label>Metadata Time Stamp</label>
    <type>DateTime</type>
</CustomField>