force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Modifier_3_Code__c.field-meta.xml
<CustomField>
    <fullName>Hz_Modifier_3_Code__c</fullName>
    <label>Modifier 3 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>