force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>Hz_Patient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Horizon_Healths</relationshipName>
    <type>Lookup</type>
</CustomField>