force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Hz_Patient_Name__c</fullName>
    <formula>Hz_Patient_Account__r.dn_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>