force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Hz_Posting_Date__c</fullName>
    <label>Posting Date</label>
    <type>DateTime</type>
</CustomField>