force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>Hz_Procedure_Code__c</fullName>
    <label>Procedure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>