force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Procedure_Description__c.field-meta.xml
<CustomField>
    <fullName>Hz_Procedure_Description__c</fullName>
    <label>Procedure Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>