force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Referring_Physician_Id__c.field-meta.xml
<CustomField>
    <fullName>Hz_Referring_Physician_Id__c</fullName>
    <label>Referring Physician Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>