force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Reversal_Type__c.field-meta.xml
<CustomField>
    <fullName>Hz_Reversal_Type__c</fullName>
    <label>Reversal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>