force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Review_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hz_Review_Assessment_Notes__c</fullName>
    <label>Review Assessment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>