force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Status__c.field-meta.xml
<CustomField>
    <fullName>Hz_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>NEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>