force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Total_Expected_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Hz_Total_Expected_Reimbursement__c</fullName>
    <label>Total Expected Reimbursement</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>