force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Hz_Transaction_Status__c</fullName>
    <label>Transaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>