force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Units__c.field-meta.xml
<CustomField>
    <fullName>Hz_Units__c</fullName>
    <label>Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>