force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Hz_Updated_At__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>