force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Updated_By_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Hz_Updated_By_User_Id__c</fullName>
    <label>Updated By User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>