force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Value__c.field-meta.xml
<CustomField>
    <fullName>Hz_Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>