force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_VOB_Case__c.field-meta.xml
<CustomField>
    <fullName>Hz_VOB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOB Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Horizon_Healths</relationshipName>
    <type>Lookup</type>
</CustomField>