force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Withhold_Applied__c.field-meta.xml
<CustomField>
    <fullName>Hz_Withhold_Applied__c</fullName>
    <label>Withhold Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>