force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Hz_Work_RVU__c.field-meta.xml
<CustomField>
    <fullName>Hz_Work_RVU__c</fullName>
    <label>Work RVU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>