force-app/main/default/objects/Hz_Horizon_Charges__c/fields/Medicare_Geozip__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Geozip__c</fullName>
    <formula>LEFT(Geozip__c, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicare Geozip</label>
    <type>Text</type>
</CustomField>