force-app/main/default/objects/Hz_Horizon_Charges__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hz_VOB_Case__c</columns>
    <columns>Hz_Expected_Reimbursement__c</columns>
    <columns>Hz_Insurance_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>